manifests/applications/five31/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
  name: backend
  namespace: five31
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/bakseter/five31/backend:latest
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 1001
