manifests/applications/five31/database-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: five31
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  serviceName: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:17-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              mountPropagation: None
              name: postgres-data
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: database
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 1001
