manifests/applications/five31/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: "true"
    keel.sh/policy: force
    keel.sh/trigger: poll
  name: five31
  namespace: five31
spec:
  replicas: 1
  selector:
    matchLabels:
      app: five31
  template:
    metadata:
      labels:
        app: five31
    spec:
      containers:
      - name: five31
        image: ghcr.io/bakseter/531/backend:latest
        ports:
        - containerPort: 8080
