manifests/applications/five31/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: five31
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
