manifests/applications/five31/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: five31-backend
  namespace: five31
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: five31-backend
  type: ClusterIP
