manifests/applications/five31/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: five31
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: database
  type: ClusterIP
