manifests/applications/five31/service.yml
apiVersion: v1
kind: Service
metadata:
  name: five31
  namespace: five31
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: five31
  type: ClusterIP
